<resources>
    <string name="app_name">Desmascarando</string>
    <string name="tab_text_1">Desmascarados</string>
    <string name="tab_text_2">Mapa</string>

    <string name="dialog_placeholder_model">Novo nome</string>
    <string name="dialog_placeholder_brand">Confirme seu email</string>
    <string name="dialog_placeholder_year">Ano do modelo</string>
    <string name="dialog_title">Alterar nome</string>
    <string name="dialog_negative_button">Cancelar</string>
    <string name="dialog_positive_button">Adicionar</string>
    <string name="card_brand_brand">Marca</string>
    <string name="card_model_model">Modelo</string>
    <string name="card_model_brand">/ Marca</string>
    <string name="title_activity_menu">Menu</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings_logout">Sair</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Senha</string>
    <string name="action_sign_in">Entrar</string>
    <string name="action_sign_in_short">Entrar</string>
    <string name="welcome">"Welcome!"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Opa! Usuário não encontrado ou senha errada."</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="register_link">Cadastre-se agora</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="desmascarando_title">DESMASCARANDO</string>
    <string name="login_e_mail">E-mail</string>
    <string name="senha_login">Senha</string>
    <string name="register_e_mail">E-mail</string>
    <string name="nome_register">Nome</string>
    <string name="senha_register">Senha</string>
    <string name="nome_card">Fulano de t•al</string>
    <string name="hora_card">08:00</string>
    <string name="ver_no_mapa">Ver no mapa</string>
    <string name="action_settings_alter_name">Alterar nome</string>
    <string name="desmascarando_upper">DESMASCARANDO</string>
    <string name="cancelar_alter_name">Cancelar</string>
    <string name="alterar_alter_name">Alterar</string>
    <string name="pessoa_sem_m_scara_aqui">Pessoa sem máscara aqui</string>
    <string name="horario_dialog">Horario</string>
    <string name="cancelar_dialog">Cancelar</string>
    <string name="adicionar_dialog">Adicionar</string>
</resources>
