<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/card_item_model"
    android:layout_width="match_parent"
    android:layout_height="200dp"
    android:layout_marginHorizontal="10dp"
    android:layout_marginVertical="5dp"
    android:background="@color/black"
    android:orientation="horizontal">

    <ImageView
        android:id="@+id/card_image"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:layout_marginBottom="2dp"
        android:gravity="center"
        android:src="@drawable/mask"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="0dp"
        android:layout_marginEnd="0dp"
        android:layout_marginBottom="2dp"
        android:background="@color/darkgrey"
        android:orientation="horizontal"
        android:paddingVertical="10dp"
        android:paddingStart="10dp"
        android:paddingEnd="10dp">

        <ImageView
            android:id="@+id/card_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_baseline_account_circle_24" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="2"
            android:orientation="vertical">

            <TextView
                android:id="@+id/card_text_author"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_weight="1"
                android:gravity="left"
                android:text="@string/nome_card"
                android:textColor="@color/textNormal"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/card_text_time"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_marginStart="10dp"
                android:layout_weight="20"
                android:gravity="left"
                android:text="@string/hora_card"
                android:textColor="@color/textNormal" />
        </LinearLayout>

        <Button
            android:id="@+id/card_view_map"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/darkgrey"
            android:text="@string/ver_no_mapa"
            android:textColor="@color/white"
            android:textSize="10sp" />

    </LinearLayout>

</RelativeLayout>